[gd_scene load_steps=4 format=3 uid="uid://boiiv41c414ov"]

[ext_resource type="Theme" uid="uid://b6u7qwmje5eat" path="res://themes/misc/main.tres" id="1_6i06n"]
[ext_resource type="Script" path="res://scripts/gui/video.gd" id="2_te45x"]
[ext_resource type="Theme" uid="uid://bv6e2mt8sdylq" path="res://themes/misc/submenu.tres" id="3_dg1d8"]

[node name="Video" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6i06n")
script = ExtResource("2_te45x")

[node name="VideoMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VideoMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -318.0
offset_top = 320.0
offset_right = 318.0
offset_bottom = 920.0
grow_horizontal = 2

[node name="PanelContainer" type="PanelContainer" parent="VideoMenu/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VideoMenu/MarginContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("3_dg1d8")

[node name="VBoxContainer" type="VBoxContainer" parent="VideoMenu/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="VideoMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VideoMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2
text = "Pixel Scale"

[node name="CenterContainer" type="CenterContainer" parent="VideoMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VideoMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="1x" type="Button" parent="VideoMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "1x"

[node name="2x" type="Button" parent="VideoMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "2x"

[node name="4x" type="Button" parent="VideoMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "4x"

[node name="8x" type="Button" parent="VideoMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "8x"

[node name="Return" type="Button" parent="VideoMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return"

[connection signal="pressed" from="VideoMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/1x" to="." method="_on_one_scale_pressed"]
[connection signal="pressed" from="VideoMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/2x" to="." method="_on_two_scale_pressed"]
[connection signal="pressed" from="VideoMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/4x" to="." method="_on_four_scale_pressed"]
[connection signal="pressed" from="VideoMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/8x" to="." method="_on_eight_scale_pressed"]
[connection signal="pressed" from="VideoMenu/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
